--- a/index.html
+++ b/index.html
@@ -421,88 +421,150 @@ const imposterCount=document.getElementById("imposterCount");
 const category=document.getElementById("category");
 const data={
 sports:[
-  ["Basketball","crossover"],["Football","blitz"],["Baseball","changeup"],
-  ["Soccer","nutmeg"],["Tennis","topspin"],["Golf","fade"],
-  ["Hockey","deke"],["Volleyball","libero"],["Swimming","butterfly"],
-  ["Boxing","uppercut"],["Wrestling","takedown"],["Gymnastics","vault"],
-  ["Track","baton"],["Skiing","mogul"],["Surfing","cutback"],
-  ["Skateboarding","kickflip"],["Cricket","googly"],["Rugby","lineout"],
-  ["Bowling","split"],["Lacrosse","ground ball"],["Badminton","smash"],
-  ["Archery","nock"],["Fencing","riposte"],["Karate","kata"],
-  ["Cycling","peloton"],["Marathon","bonk"],["Polo","chukker"],
-  ["Diving","pike"],["Rowing","catch"],["Rock Climbing","crimp"]
+  ["Basketball","buzzer"],["Football","hurdle"],["Baseball","catch"],
+  ["Soccer","offside"],["Tennis","baseline"],["Golf","pull"],
+  ["Hockey","horn"],["Volleyball","jump"],["Swimming","goggles"],
+  ["Boxing","corner"],["Wrestling","singlet"],["Gymnastics","chalk"],
+  ["Track","lap"],["Skiing","cold"],["Surfing","wax"],
+  ["Skateboarding","slope"],["Cricket","boundary"],["Rugby","scrum"],
+  ["Bowling","approach"],["Lacrosse","pocket"],["Badminton","rally"],
+  ["Archery","quiver"],["Fencing","foil"],["Karate","sparring"],
+  ["Cycling","gears"],["Marathon","hydration"],["Polo","mallet"],
+  ["Diving","springboard"],["Rowing","water"],["Rock Climbing","harness"],
+  ["Softball","yellow"],["Frisbee","upwind"],["Ping Pong","rubber"],
+  ["Curling","house"],["Handball","net"],["Water Polo","eggbeater"],
+  ["Snowboarding","edge"],["BMX","pegs"],["Cheerleading","basket toss"],
+  ["Figure Skating","axel"],["Dodgeball","boundaries"],["Kickball","foot"],
+  ["Ultimate Frisbee","handler"],["Racquetball","ceiling"],["Squash","tin"],
+  ["Judo","tatami"],["Taekwondo","sparring gear"],["CrossFit","box"],
+  ["Powerlifting","chalk"],["Arm Wrestling","pin"],["Billiards","chalk"]
 ],
 animals:[
-  ["Dog","paw pad"],["Cat","whisker"],["Elephant","matriarch"],
-  ["Giraffe","ossicone"],["Lion","mane"],["Tiger","stripes"],
-  ["Bear","den"],["Monkey","opposable"],["Zebra","stallion"],
-  ["Penguin","molt"],["Eagle","talon"],["Dolphin","echolocation"],
-  ["Shark","cartilage"],["Whale","blowhole"],["Snake","molt"],
-  ["Frog","tadpole"],["Rabbit","warren"],["Turtle","carapace"],
-  ["Owl","pellet"],["Parrot","cere"],["Kangaroo","marsupial"],
-  ["Koala","fingerprint"],["Panda","cub"],["Peacock","train"],
-  ["Octopus","beak"],["Jellyfish","medusa"],["Butterfly","proboscis"],
-  ["Bee","waggle"],["Spider","spinneret"],["Crocodile","osteoderm"]
+  ["Dog","tags"],["Cat","scratching post"],["Elephant","tusks"],
+  ["Giraffe","acacia"],["Lion","mane"],["Tiger","ambush"],
+  ["Bear","salmon"],["Monkey","grooming"],["Zebra","predator"],
+  ["Penguin","huddle"],["Eagle","nest"],["Dolphin","pod"],
+  ["Shark","gills"],["Whale","krill"],["Snake","fangs"],
+  ["Frog","croak"],["Rabbit","hutch"],["Turtle","hatchling"],
+  ["Owl","talons"],["Parrot","perch"],["Kangaroo","bounce"],
+  ["Koala","joey"],["Panda","1920 tv"],["Peacock","courting"],
+  ["Octopus","camouflage"],["Jellyfish","sting"],["Butterfly","migration"],
+  ["Bee","pollen"],["Spider","prey"],["Crocodile","lurk"],
+  ["Hamster","cheeks"],["Guinea Pig","cavy"],["Ferret","tunnel"],
+  ["Hedgehog","nocturnal"],["Raccoon","dexterous"],["Squirrel","cache"],
+  ["Deer","velvet"],["Moose","antlers"],["Fox","den"],
+  ["Wolf","alpha"],["Cheetah","acceleration"],["Leopard","rosettes"],
+  ["Gorilla","silverback"],["Hippo","territorial"],["Rhino","horn"],
+  ["Camel","caravan"],["Llama","herd"],["Alpaca","fiber"],
+  ["Seal","haul out"],["Walrus","whiskers"],["Otter","riverbank"],
+  ["Flamingo","filter"],["Pelican","dive"],["Toucan","bill"],
+  ["Bat","echolocation"],["Mouse","nest"],["Rat","urban"]
 ],
 food:[
-  ["Pizza","dough"],["Burger","sear"],["Sushi","nigiri"],
-  ["Pasta","al dente"],["Taco","masa"],["Sandwich","panini"],
-  ["Salad","vinaigrette"],["Soup","consommé"],["Steak","marbling"],
-  ["Chicken","brine"],["Fish","fillet"],["Rice","arborio"],
-  ["Cheese","rennet"],["Ice Cream","churn"],["Cake","crumb"],
-  ["Cookie","crimp"],["Donut","proof"],["Pancake","buttermilk"],
-  ["Waffle","batter"],["Cereal","toasted"],["Toast","caramelize"],
-  ["Egg","coddled"],["Bacon","cure"],["Hot Dog","casing"],
-  ["Burrito","fold"],["Nachos","queso"],["Popcorn","hull"],
-  ["Pretzel","lye"],["Chips","kettle"],["Fries","blanch"]
+  ["Pizza","variety"],["Burger","bread"],["Sushi","roll"],
+  ["Pasta","sauce"],["Taco","meat"],["Sandwich","lunch"],
+  ["Salad","healthy"],["Soup","spoon"],["Steak","knife"],
+  ["Chicken","fried"],["Fish","bones"],["Rice","grain"],
+  ["Cheese","slice"],["Ice Cream","cone"],["Cake","candles"],
+  ["Cookie","chips"],["Donut","sprinkles"],["Pancake","stack"],
+  ["Waffle","syrup"],["Cereal","spoon"],["Toast","jam"],
+  ["Egg","scrambled"],["Bacon","strips"],["Hot Dog","bun"],
+  ["Burrito","foil"],["Nachos","dip"],["Popcorn","kernels"],
+  ["Pretzel","salt"],["Chips","crunch"],["Fries","golden"],
+  ["Lasagna","layers"],["Ravioli","stuffed"],["Spaghetti","twirl"],
+  ["Meatball","round"],["Ribs","sauce"],["Wings","buffalo"],
+  ["Shrimp","tail"],["Lobster","claws"],["Crab","shell"],
+  ["Oyster","pearl"],["Clam","ocean"],["Scallops","sear"],
+  ["Bagel","hole"],["Croissant","flaky"],["Muffin","top"],
+  ["Brownie","chocolate"],["Cupcake","wrapper"],["Pie","filling"],
+  ["Cheesecake","creamy"],["Pudding","smooth"],["Jello","jiggly"],
+  ["Yogurt","spoon"],["Oatmeal","bowl"],["Granola","crunchy"],
+  ["Peanut Butter","jar"],["Jelly","grape"],["Honey","bear"],
+  ["Maple Syrup","bottle"],["Ketchup","red"],["Mustard","yellow"]
 ],
 locations:[
-  ["Beach","dune"],["Mountain","summit"],["Forest","canopy"],
-  ["Desert","mirage"],["Lake","basin"],["River","meander"],
-  ["Park","gazebo"],["Zoo","enclosure"],["Museum","curator"],
-  ["Library","stacks"],["School","semester"],["Hospital","triage"],
-  ["Airport","tarmac"],["Train Station","depot"],["Mall","atrium"],
-  ["Restaurant","sommelier"],["Hotel","concierge"],["Gym","spotter"],
-  ["Theater","proscenium"],["Stadium","concourse"],["Church","nave"],
-  ["Castle","battlement"],["Bridge","abutment"],["Lighthouse","keeper"],
-  ["Farm","silo"],["Factory","conveyor"],["Warehouse","pallet"],
-  ["Bakery","lamination"],["Bank","vault"],["Post Office","sorter"]
+  ["Beach","lifeguard"],["Mountain","summit"],["Forest","ranger"],
+  ["Desert","mirage"],["Lake","dock"],["River","current"],
+  ["Park","fountain"],["Zoo","habitat"],["Museum","curator"],
+  ["Library","dewey decimal"],["School","principal"],["Hospital","triage"],
+  ["Airport","gate"],["Train Station","conductor"],["Mall","directory"],
+  ["Restaurant","reservation"],["Hotel","concierge"],["Gym","membership"],
+  ["Theater","balcony"],["Stadium","jumbotron"],["Church","pew"],
+  ["Castle","drawbridge"],["Bridge","cables"],["Lighthouse","keeper"],
+  ["Farm","irrigation"],["Factory","conveyor"],["Warehouse","forklift"],
+  ["Bakery","proofing"],["Bank","teller"],["Post Office","sorting"],
+  ["Grocery Store","scanner"],["Gas Station","octane"],["Car Wash","touchless"],
+  ["Pharmacy","dosage"],["Laundromat","detergent"],["Barber Shop","clippers"],
+  ["Salon","foils"],["Spa","therapist"],["Dentist","hygienist"],
+  ["Vet","kennel"],["Aquarium","filtration"],["Planetarium","dome"],
+  ["Casino","odds"],["Bowling Alley","wax"],["Movie Theater","projector"],
+  ["Arcade","tokens"],["Miniature Golf","scorecard"],["Go Karts","caution flag"],
+  ["Skate Park","rails"],["Playground","mulch"],["Trampoline Park","socks"],
+  ["Laser Tag","sensors"],["Escape Room","padlock"],["Haunted House","fog machine"],
+  ["Concert Hall","orchestra pit"],["Opera House","boxes"],["Comedy Club","two drink minimum"]
 ],
 objects:[
-  ["Phone","touchscreen"],["Computer","processor"],["TV","pixel"],
-  ["Book","spine"],["Pen","nib"],["Pencil","ferrule"],
-  ["Clock","escapement"],["Calendar","solstice"],["Camera","aperture"],
-  ["Mirror","silvering"],["Lamp","filament"],["Chair","spindle"],
-  ["Table","grain"],["Bed","box spring"],["Pillow","down"],
-  ["Blanket","weave"],["Cup","rim"],["Plate","glaze"],
-  ["Fork","tine"],["Knife","tang"],["Spoon","bowl"],
-  ["Bottle","neck"],["Can","seam"],["Bag","gusset"],
-  ["Backpack","sternum"],["Wallet","bifold"],["Keys","tumbler"],
-  ["Umbrella","ferrule"],["Sunglasses","polarized"],["Hat","crown"]
+  ["Phone","notification"],["Computer","desktop"],["TV","antenna"],
+  ["Book","dust jacket"],["Pen","ink"],["Pencil","wood"],
+  ["Clock","pendulum"],["Calendar","weekend"],["Camera","shutter"],
+  ["Mirror","reflection"],["Lamp","wattage"],["Chair","swivel"],
+  ["Table","varnish"],["Bed","headboard"],["Pillow","stuffing"],
+  ["Blanket","thread count"],["Cup","coaster"],["Plate","ceramic"],
+  ["Fork","prong"],["Knife","serration"],["Spoon","ladle"],
+  ["Bottle","twist off"],["Can","pull tab"],["Bag","reusable"],
+  ["Backpack","laptop sleeve"],["Wallet","billfold"],["Keys","fob"],
+  ["Umbrella","canopy"],["Sunglasses","UV protection"],["Hat","fitted"],
+  ["Watch","chronograph"],["Bracelet","clasp"],["Necklace","clasp"],
+  ["Ring","band"],["Earrings","backs"],["Belt","notch"],
+  ["Shoes","insole"],["Socks","elastic"],["Gloves","fingers"],
+  ["Scarf","fringe"],["Tie","dimple"],["Bow Tie","butterfly"],
+  ["Jacket","lining"],["Coat","toggle"],["Sweater","ribbing"],
+  ["Pants","inseam"],["Shorts","elastic"],["Skirt","hemline"],
+  ["Dress","bodice"],["Shirt","placket"],["T-shirt","neckline"],
+  ["Toothbrush","timer"],["Toothpaste","fluoride"],["Soap","glycerin"],
+  ["Shampoo","sulfate"],["Towel","loop"],["Scissors","pivot"]
 ],
 entertainment:[
-  ["Movie","montage"],["Concert","soundcheck"],["Play","understudy"],
-  ["Comedy Show","callback"],["Magic Show","misdirection"],["Circus","trapeze"],
-  ["Carnival","midway"],["Fair","livestock"],["Festival","headliner"],
-  ["Parade","grand marshal"],["Fireworks","finale"],["Party","rsvp"],
-  ["Dance","choreography"],["Karaoke","backing track"],["Arcade","high score"],
-  ["Bowling Alley","gutter"],["Roller Rink","jam skate"],["Amusement Park","fast pass"],
-  ["Water Park","lazy river"],["Escape Room","red herring"],["Laser Tag","respawn"],
-  ["Haunted House","jump scare"],["Campfire","embers"],["BBQ","low and slow"],
-  ["Picnic","checkered"],["Beach Party","tiki torch"],["Game Night","house rules"],
-  ["Trivia Night","lightning round"],["Talent Show","applause meter"],["Art Class","still life"]
+  ["Movie","runtime"],["Concert","setlist"],["Play","props"],
+  ["Comedy Show","open mic"],["Magic Show","sleight"],["Circus","aerial"],
+  ["Carnival","barker"],["Fair","ribbon"],["Festival","lineup"],
+  ["Parade","permits"],["Fireworks","mortars"],["Party","playlist"],
+  ["Dance","tempo"],["Karaoke","queue"],["Arcade","cabinet"],
+  ["Bowling Alley","bumpers"],["Roller Rink","organ"],["Amusement Park","height requirement"],
+  ["Water Park","cabana"],["Escape Room","game master"],["Laser Tag","vest"],
+  ["Haunted House","scare zone"],["Campfire","kindling"],["BBQ","rub"],
+  ["Picnic","cooler"],["Beach Party","volleyball net"],["Game Night","house rules"],
+  ["Trivia Night","buzzer"],["Talent Show","contestant"],["Art Class","smock"],
+  ["Painting","canvas"],["Drawing","eraser"],["Pottery","wheel"],
+  ["Sculpture","armature"],["Photography","aperture"],["Film","director"],
+  ["Theater","understudy"],["Musical","overture"],["Opera","libretto"],
+  ["Ballet","pointe shoes"],["Hip Hop","cypher"],["Jazz","improvisation"],
+  ["Rock Concert","roadie"],["Pop Concert","lip sync"],["Classical","baton"],
+  ["Karate Tournament","kata"],["Chess Match","notation"],["Poker Night","ante"],
+  ["Bingo","card"],["Lottery","jackpot"],["Raffle","stub"],
+  ["Book Club","discussion"],["Cooking Class","mise en place"],["Wine Tasting","tannins"]
 ],
 professions:[
-  ["Doctor","rounds"],["Nurse","triage"],["Teacher","syllabus"],
-  ["Chef","mise en place"],["Waiter","expo"],["Pilot","yoke"],
-  ["Flight Attendant","galley"],["Driver","deadhead"],["Mechanic","torque"],
-  ["Plumber","snake"],["Electrician","breaker"],["Carpenter","rabbet"],
-  ["Painter","drop cloth"],["Firefighter","turnout"],["Police Officer","beat"],
-  ["Soldier","formation"],["Lawyer","deposition"],["Judge","bench"],
-  ["Cashier","drawer"],["Barista","tamp"],["Bartender","jigger"],
-  ["Photographer","bokeh"],["Musician","embouchure"],["Singer","falsetto"],
-  ["Actor","blocking"],["Dancer","spotting"],["Artist","gesso"],
-  ["Writer","manuscript"],["Journalist","byline"],["Scientist","hypothesis"]
+  ["Doctor","residency"],["Nurse","rounds"],["Teacher","curriculum"],
+  ["Chef","brigade"],["Waiter","section"],["Pilot","logbook"],
+  ["Flight Attendant","jumpseat"],["Driver","CDL"],["Mechanic","diagnostic"],
+  ["Plumber","soldering"],["Electrician","breaker"],["Carpenter","joinery"],
+  ["Painter","primer"],["Firefighter","apparatus"],["Police Officer","precinct"],
+  ["Soldier","drill"],["Lawyer","brief"],["Judge","chambers"],
+  ["Cashier","drawer"],["Barista","grind"],["Bartender","muddler"],
+  ["Photographer","bokeh"],["Musician","gig"],["Singer","vibrato"],
+  ["Actor","callback"],["Dancer","barre"],["Artist","medium"],
+  ["Writer","revision"],["Journalist","byline"],["Scientist","control"],
+  ["Accountant","ledger"],["Banker","interest"],["Architect","elevation"],
+  ["Engineer","tolerance"],["Programmer","syntax"],["Designer","kerning"],
+  ["Dentist","crown"],["Veterinarian","scrubs"],["Pharmacist","compounding"],
+  ["Librarian","circulation"],["Secretary","memorandum"],["Receptionist","directory"],
+  ["Mail Carrier","satchel"],["Delivery Driver","manifest"],["Truck Driver","logbook"],
+  ["Construction Worker","permit"],["Janitor","custodial"],["Security Guard","shift"],
+  ["Lifeguard","certification"],["Personal Trainer","certification"],["Coach","clipboard"],
+  ["Referee","whistle"],["Umpire","indicator"],["Athlete","draft"],
+  ["Model","portfolio"],["Makeup Artist","contour"],["Hair Stylist","sectioning"],
+  ["Tailor","alterations"],["Cobbler","resoling"],["Jeweler","setting"]
 ]
 };
 const categoryNames={
