--- a/index.html
+++ b/index.html
@@ -420,152 +420,364 @@ const playerCount=document.getElementById("playerCount");
 const imposterCount=document.getElementById("imposterCount");
 const category=document.getElementById("category");
 const data={
-sports:[
-  ["Basketball","buzzer"],["Football","hurdle"],["Baseball","catch"],
-  ["Soccer","offside"],["Tennis","baseline"],["Golf","pull"],
-  ["Hockey","horn"],["Volleyball","jump"],["Swimming","goggles"],
-  ["Boxing","corner"],["Wrestling","singlet"],["Gymnastics","chalk"],
-  ["Track","lap"],["Skiing","cold"],["Surfing","wax"],
-  ["Skateboarding","slope"],["Cricket","boundary"],["Rugby","scrum"],
-  ["Bowling","approach"],["Lacrosse","pocket"],["Badminton","rally"],
-  ["Archery","quiver"],["Fencing","foil"],["Karate","sparring"],
-  ["Cycling","gears"],["Marathon","hydration"],["Polo","mallet"],
-  ["Diving","springboard"],["Rowing","water"],["Rock Climbing","harness"],
-  ["Softball","yellow"],["Frisbee","upwind"],["Ping Pong","rubber"],
-  ["Curling","house"],["Handball","net"],["Water Polo","eggbeater"],
-  ["Snowboarding","edge"],["BMX","pegs"],["Cheerleading","basket toss"],
-  ["Figure Skating","axel"],["Dodgeball","boundaries"],["Kickball","foot"],
-  ["Ultimate Frisbee","handler"],["Racquetball","ceiling"],["Squash","tin"],
-  ["Judo","tatami"],["Taekwondo","sparring gear"],["CrossFit","box"],
-  ["Powerlifting","chalk"],["Arm Wrestling","pin"],["Billiards","chalk"]
-],
-animals:[
-  ["Dog","tags"],["Cat","scratching post"],["Elephant","tusks"],
-  ["Giraffe","acacia"],["Lion","mane"],["Tiger","ambush"],
-  ["Bear","salmon"],["Monkey","grooming"],["Zebra","predator"],
-  ["Penguin","huddle"],["Eagle","nest"],["Dolphin","pod"],
-  ["Shark","gills"],["Whale","krill"],["Snake","fangs"],
-  ["Frog","croak"],["Rabbit","hutch"],["Turtle","hatchling"],
-  ["Owl","talons"],["Parrot","perch"],["Kangaroo","bounce"],
-  ["Koala","joey"],["Panda","1920 tv"],["Peacock","courting"],
-  ["Octopus","camouflage"],["Jellyfish","sting"],["Butterfly","migration"],
-  ["Bee","pollen"],["Spider","prey"],["Crocodile","lurk"],
-  ["Hamster","cheeks"],["Guinea Pig","cavy"],["Ferret","tunnel"],
-  ["Hedgehog","nocturnal"],["Raccoon","dexterous"],["Squirrel","cache"],
-  ["Deer","velvet"],["Moose","antlers"],["Fox","den"],
-  ["Wolf","alpha"],["Cheetah","acceleration"],["Leopard","rosettes"],
-  ["Gorilla","silverback"],["Hippo","territorial"],["Rhino","horn"],
-  ["Camel","caravan"],["Llama","herd"],["Alpaca","fiber"],
-  ["Seal","haul out"],["Walrus","whiskers"],["Otter","riverbank"],
-  ["Flamingo","filter"],["Pelican","dive"],["Toucan","bill"],
-  ["Bat","echolocation"],["Mouse","nest"],["Rat","urban"]
-],
-food:[
-  ["Pizza","variety"],["Burger","bread"],["Sushi","roll"],
-  ["Pasta","sauce"],["Taco","meat"],["Sandwich","lunch"],
-  ["Salad","healthy"],["Soup","spoon"],["Steak","knife"],
-  ["Chicken","fried"],["Fish","bones"],["Rice","grain"],
-  ["Cheese","slice"],["Ice Cream","cone"],["Cake","candles"],
-  ["Cookie","chips"],["Donut","sprinkles"],["Pancake","stack"],
-  ["Waffle","syrup"],["Cereal","spoon"],["Toast","jam"],
-  ["Egg","scrambled"],["Bacon","strips"],["Hot Dog","bun"],
-  ["Burrito","foil"],["Nachos","dip"],["Popcorn","kernels"],
-  ["Pretzel","salt"],["Chips","crunch"],["Fries","golden"],
-  ["Lasagna","layers"],["Ravioli","stuffed"],["Spaghetti","twirl"],
-  ["Meatball","round"],["Ribs","sauce"],["Wings","buffalo"],
-  ["Shrimp","tail"],["Lobster","claws"],["Crab","shell"],
-  ["Oyster","pearl"],["Clam","ocean"],["Scallops","sear"],
-  ["Bagel","hole"],["Croissant","flaky"],["Muffin","top"],
-  ["Brownie","chocolate"],["Cupcake","wrapper"],["Pie","filling"],
-  ["Cheesecake","creamy"],["Pudding","smooth"],["Jello","jiggly"],
-  ["Yogurt","spoon"],["Oatmeal","bowl"],["Granola","crunchy"],
-  ["Peanut Butter","jar"],["Jelly","grape"],["Honey","bear"],
-  ["Maple Syrup","bottle"],["Ketchup","red"],["Mustard","yellow"]
-],
-locations:[
-  ["Beach","lifeguard"],["Mountain","summit"],["Forest","ranger"],
-  ["Desert","mirage"],["Lake","dock"],["River","current"],
-  ["Park","fountain"],["Zoo","habitat"],["Museum","curator"],
-  ["Library","dewey decimal"],["School","principal"],["Hospital","triage"],
-  ["Airport","gate"],["Train Station","conductor"],["Mall","directory"],
-  ["Restaurant","reservation"],["Hotel","concierge"],["Gym","membership"],
-  ["Theater","balcony"],["Stadium","jumbotron"],["Church","pew"],
-  ["Castle","drawbridge"],["Bridge","cables"],["Lighthouse","keeper"],
-  ["Farm","irrigation"],["Factory","conveyor"],["Warehouse","forklift"],
-  ["Bakery","proofing"],["Bank","teller"],["Post Office","sorting"],
-  ["Grocery Store","scanner"],["Gas Station","octane"],["Car Wash","touchless"],
-  ["Pharmacy","dosage"],["Laundromat","detergent"],["Barber Shop","clippers"],
-  ["Salon","foils"],["Spa","therapist"],["Dentist","hygienist"],
-  ["Vet","kennel"],["Aquarium","filtration"],["Planetarium","dome"],
-  ["Casino","odds"],["Bowling Alley","wax"],["Movie Theater","projector"],
-  ["Arcade","tokens"],["Miniature Golf","scorecard"],["Go Karts","caution flag"],
-  ["Skate Park","rails"],["Playground","mulch"],["Trampoline Park","socks"],
-  ["Laser Tag","sensors"],["Escape Room","padlock"],["Haunted House","fog machine"],
-  ["Concert Hall","orchestra pit"],["Opera House","boxes"],["Comedy Club","two drink minimum"]
-],
-objects:[
-  ["Phone","notification"],["Computer","desktop"],["TV","antenna"],
-  ["Book","dust jacket"],["Pen","ink"],["Pencil","wood"],
-  ["Clock","pendulum"],["Calendar","weekend"],["Camera","shutter"],
-  ["Mirror","reflection"],["Lamp","wattage"],["Chair","swivel"],
-  ["Table","varnish"],["Bed","headboard"],["Pillow","stuffing"],
-  ["Blanket","thread count"],["Cup","coaster"],["Plate","ceramic"],
-  ["Fork","prong"],["Knife","serration"],["Spoon","ladle"],
-  ["Bottle","twist off"],["Can","pull tab"],["Bag","reusable"],
-  ["Backpack","laptop sleeve"],["Wallet","billfold"],["Keys","fob"],
-  ["Umbrella","canopy"],["Sunglasses","UV protection"],["Hat","fitted"],
-  ["Watch","chronograph"],["Bracelet","clasp"],["Necklace","clasp"],
-  ["Ring","band"],["Earrings","backs"],["Belt","notch"],
-  ["Shoes","insole"],["Socks","elastic"],["Gloves","fingers"],
-  ["Scarf","fringe"],["Tie","dimple"],["Bow Tie","butterfly"],
-  ["Jacket","lining"],["Coat","toggle"],["Sweater","ribbing"],
-  ["Pants","inseam"],["Shorts","elastic"],["Skirt","hemline"],
-  ["Dress","bodice"],["Shirt","placket"],["T-shirt","neckline"],
-  ["Toothbrush","timer"],["Toothpaste","fluoride"],["Soap","glycerin"],
-  ["Shampoo","sulfate"],["Towel","loop"],["Scissors","pivot"]
-],
-entertainment:[
-  ["Movie","runtime"],["Concert","setlist"],["Play","props"],
-  ["Comedy Show","open mic"],["Magic Show","sleight"],["Circus","aerial"],
-  ["Carnival","barker"],["Fair","ribbon"],["Festival","lineup"],
-  ["Parade","permits"],["Fireworks","mortars"],["Party","playlist"],
-  ["Dance","tempo"],["Karaoke","queue"],["Arcade","cabinet"],
-  ["Bowling Alley","bumpers"],["Roller Rink","organ"],["Amusement Park","height requirement"],
-  ["Water Park","cabana"],["Escape Room","game master"],["Laser Tag","vest"],
-  ["Haunted House","scare zone"],["Campfire","kindling"],["BBQ","rub"],
-  ["Picnic","cooler"],["Beach Party","volleyball net"],["Game Night","house rules"],
-  ["Trivia Night","buzzer"],["Talent Show","contestant"],["Art Class","smock"],
-  ["Painting","canvas"],["Drawing","eraser"],["Pottery","wheel"],
-  ["Sculpture","armature"],["Photography","aperture"],["Film","director"],
-  ["Theater","understudy"],["Musical","overture"],["Opera","libretto"],
-  ["Ballet","pointe shoes"],["Hip Hop","cypher"],["Jazz","improvisation"],
-  ["Rock Concert","roadie"],["Pop Concert","lip sync"],["Classical","baton"],
-  ["Karate Tournament","kata"],["Chess Match","notation"],["Poker Night","ante"],
-  ["Bingo","card"],["Lottery","jackpot"],["Raffle","stub"],
-  ["Book Club","discussion"],["Cooking Class","mise en place"],["Wine Tasting","tannins"]
-],
-professions:[
-  ["Doctor","residency"],["Nurse","rounds"],["Teacher","curriculum"],
-  ["Chef","brigade"],["Waiter","section"],["Pilot","logbook"],
-  ["Flight Attendant","jumpseat"],["Driver","CDL"],["Mechanic","diagnostic"],
-  ["Plumber","soldering"],["Electrician","breaker"],["Carpenter","joinery"],
-  ["Painter","primer"],["Firefighter","apparatus"],["Police Officer","precinct"],
-  ["Soldier","drill"],["Lawyer","brief"],["Judge","chambers"],
-  ["Cashier","drawer"],["Barista","grind"],["Bartender","muddler"],
-  ["Photographer","bokeh"],["Musician","gig"],["Singer","vibrato"],
-  ["Actor","callback"],["Dancer","barre"],["Artist","medium"],
-  ["Writer","revision"],["Journalist","byline"],["Scientist","control"],
-  ["Accountant","ledger"],["Banker","interest"],["Architect","elevation"],
-  ["Engineer","tolerance"],["Programmer","syntax"],["Designer","kerning"],
-  ["Dentist","crown"],["Veterinarian","scrubs"],["Pharmacist","compounding"],
-  ["Librarian","circulation"],["Secretary","memorandum"],["Receptionist","directory"],
-  ["Mail Carrier","satchel"],["Delivery Driver","manifest"],["Truck Driver","logbook"],
-  ["Construction Worker","permit"],["Janitor","custodial"],["Security Guard","shift"],
-  ["Lifeguard","certification"],["Personal Trainer","certification"],["Coach","clipboard"],
-  ["Referee","whistle"],["Umpire","indicator"],["Athlete","draft"],
-  ["Model","portfolio"],["Makeup Artist","contour"],["Hair Stylist","sectioning"],
-  ["Tailor","alterations"],["Cobbler","resoling"],["Jeweler","setting"]
-]
+  sports:[
+    ["Basketball","rock"],
+    ["Football","helmet"],
+    ["Baseball","glove"],
+    ["Soccer","goal"],
+    ["Tennis","strings"],
+    ["Golf","tee"],
+    ["Volleyball","antenna"],
+    ["Swimming","lane"],
+    ["Boxing","ring"],
+    ["Wrestling","singlet"],
+    ["Gymnastics","chalk"],
+    ["Track","starting"],
+    ["Skiing","goggles"],
+    ["Surfing","wax"],
+    ["Skateboarding","trucks"],
+    ["Cricket","wicket"],
+    ["Rugby","scrum"],
+    ["Bowling","foul"],
+    ["Lacrosse","mesh"],
+    ["Badminton","net"],
+    ["Archery","target"],
+    ["Fencing","mask"],
+    ["Karate","dojo"],
+    ["Cycling","spokes"],
+    ["Marathon","hydration"],
+    ["Polo","saddle"],
+    ["Diving","platform"],
+    ["Rowing","cox"],
+    ["Rock Climbing","carabiner"],
+    ["Softball","diamond"],
+    ["Frisbee","pull"],
+    ["Ping Pong","ping"],
+    ["Curling","hack"],
+    ["Handball","wall"],
+    ["Water Polo","goalie"],
+    ["Snowboarding","edge"],
+    ["BMX","peg"],
+    ["Cheerleading","stunt"],
+    ["Figure Skating","toe"],
+    ["Dodgeball","line"],
+    ["Kickball","diamond"],
+    ["Ultimate Frisbee","mark"],
+    ["Racquetball","ceiling"],
+    ["Squash","tin"],
+    ["Judo","tatami"],
+    ["Taekwondo","sparring"],
+    ["CrossFit","box"],
+    ["Powerlifting","chalk"],
+    ["Arm Wrestling","pad"],
+    ["Billiards","rack"]
+  ],
+  animals:[
+    ["Dog","tail"],
+    ["Cat","whiskers"],
+    ["Elephant","trunk"],
+    ["Giraffe","neck"],
+    ["Lion","mane"],
+    ["Tiger","stripe"],
+    ["Bear","paw"],
+    ["Monkey","branch"],
+    ["Zebra","stripe"],
+    ["Penguin","flipper"],
+    ["Eagle","beak"],
+    ["Dolphin","fin"],
+    ["Shark","fin"],
+    ["Whale","blowhole"],
+    ["Snake","fang"],
+    ["Frog","tongue"],
+    ["Rabbit","ear"],
+    ["Turtle","shell"],
+    ["Owl","eye"],
+    ["Parrot","beak"],
+    ["Kangaroo","pouch"],
+    ["Koala","claw"],
+    ["Panda","bamboo"],
+    ["Peacock","feather"],
+    ["Octopus","arm"],
+    ["Jellyfish","tentacle"],
+    ["Butterfly","wing"],
+    ["Bee","hive"],
+    ["Spider","web"],
+    ["Crocodile","snout"],
+    ["Hamster","cheek"],
+    ["Guinea Pig","nest"],
+    ["Ferret","den"],
+    ["Hedgehog","spine"],
+    ["Raccoon","mask"],
+    ["Squirrel","tail"],
+    ["Deer","antler"],
+    ["Moose","antler"],
+    ["Fox","den"],
+    ["Wolf","pack"],
+    ["Cheetah","spots"],
+    ["Leopard","rosette"],
+    ["Gorilla","silverback"],
+    ["Hippo","mouth"],
+    ["Rhino","horn"],
+    ["Camel","hump"],
+    ["Llama","fleece"],
+    ["Alpaca","fiber"],
+    ["Seal","flipper"]
+  ],
+  food:[
+    ["Pizza","oven"],
+    ["Burger","grill"],
+    ["Sushi","mat"],
+    ["Pasta","pot"],
+    ["Taco","shell"],
+    ["Sandwich","bread"],
+    ["Salad","bowl"],
+    ["Soup","spoon"],
+    ["Steak","pan"],
+    ["Chicken","roast"],
+    ["Fish","fillet"],
+    ["Rice","steam"],
+    ["Cheese","wheel"],
+    ["Ice Cream","cone"],
+    ["Cake","pan"],
+    ["Cookie","bake"],
+    ["Donut","glaze"],
+    ["Pancake","griddle"],
+    ["Waffle","iron"],
+    ["Cereal","bowl"],
+    ["Toast","bread"],
+    ["Egg","shell"],
+    ["Bacon","fry"],
+    ["Hot Dog","bun"],
+    ["Burrito","wrap"],
+    ["Nachos","cheese"],
+    ["Popcorn","kernels"],
+    ["Pretzel","twist"],
+    ["Chips","bag"],
+    ["Fries","basket"],
+    ["Lasagna","layer"],
+    ["Ravioli","stuffing"],
+    ["Spaghetti","noodle"],
+    ["Meatball","sauce"],
+    ["Ribs","smoke"],
+    ["Wings","buffalo"],
+    ["Shrimp","shell"],
+    ["Lobster","claw"],
+    ["Crab","carapace"],
+    ["Oyster","shell"],
+    ["Clam","sea"],
+    ["Scallops","pan"],
+    ["Bagel","hole"],
+    ["Croissant","butter"],
+    ["Muffin","top"],
+    ["Brownie","chocolate"],
+    ["Cupcake","frosting"],
+    ["Pie","crust"]
+  ],
+  locations:[
+    ["Beach","dune"],
+    ["Mountain","ridge"],
+    ["Forest","understory"],
+    ["Desert","sand"],
+    ["Lake","shore"],
+    ["River","current"],
+    ["Park","bench"],
+    ["Zoo","enclosure"],
+    ["Museum","plinth"],
+    ["Library","shelf"],
+    ["School","locker"],
+    ["Hospital","ward"],
+    ["Airport","runway"],
+    ["Train Station","platform"],
+    ["Mall","atrium"],
+    ["Restaurant","pass"],
+    ["Hotel","lobby"],
+    ["Gym","locker"],
+    ["Theater","stage"],
+    ["Stadium","stand"],
+    ["Church","altar"],
+    ["Castle","moat"],
+    ["Bridge","abutment"],
+    ["Lighthouse","lens"],
+    ["Farm","barn"],
+    ["Factory","conveyor"],
+    ["Warehouse","pallet"],
+    ["Bakery","proofing"],
+    ["Bank","vault"],
+    ["Post Office","dropbox"],
+    ["Grocery Store","register"],
+    ["Gas Station","pump"],
+    ["Car Wash","spray"],
+    ["Pharmacy","shelf"],
+    ["Laundromat","washer"],
+    ["Barber Shop","chair"],
+    ["Salon","color"],
+    ["Spa","table"],
+    ["Dentist","chair"],
+    ["Vet","exam"],
+    ["Aquarium","tank"],
+    ["Planetarium","dome"],
+    ["Casino","chip"],
+    ["Bowling Alley","lane"],
+    ["Movie Theater","screen"],
+    ["Arcade","joystick"],
+    ["Miniature Golf","hole"],
+    ["Go Karts","track"],
+    ["Skate Park","rail"],
+    ["Playground","slide"],
+    ["Trampoline Park","mat"],
+    ["Laser Tag","vest"]
+  ],
+  objects:[
+    ["Phone","screen"],
+    ["Computer","chip"],
+    ["TV","remote"],
+    ["Book","page"],
+    ["Pen","ink"],
+    ["Pencil","lead"],
+    ["Clock","gear"],
+    ["Calendar","grid"],
+    ["Camera","lens"],
+    ["Mirror","glass"],
+    ["Lamp","bulb"],
+    ["Chair","leg"],
+    ["Table","surface"],
+    ["Bed","frame"],
+    ["Pillow","filling"],
+    ["Blanket","weave"],
+    ["Cup","handle"],
+    ["Plate","rim"],
+    ["Fork","tine"],
+    ["Knife","blade"],
+    ["Spoon","bowl"],
+    ["Bottle","cap"],
+    ["Can","tab"],
+    ["Bag","strap"],
+    ["Backpack","zipper"],
+    ["Wallet","fold"],
+    ["Keys","ring"],
+    ["Umbrella","spoke"],
+    ["Sunglasses","lens"],
+    ["Hat","brim"],
+    ["Watch","dial"],
+    ["Bracelet","clasp"],
+    ["Necklace","chain"],
+    ["Ring","band"],
+    ["Earrings","post"],
+    ["Belt","buckle"],
+    ["Shoes","sole"],
+    ["Socks","cuff"],
+    ["Gloves","seam"],
+    ["Scarf","fringe"],
+    ["Tie","knot"],
+    ["Bow Tie","wing"],
+    ["Jacket","zipper"],
+    ["Coat","button"],
+    ["Sweater","stitch"],
+    ["Pants","hem"],
+    ["Shorts","waist"]
+  ],
+  entertainment:[
+    ["Movie","reel"],
+    ["Concert","stage"],
+    ["Play","curtain"],
+    ["Comedy Show","mic"],
+    ["Magic Show","wand"],
+    ["Circus","tent"],
+    ["Carnival","ticket"],
+    ["Fair","booth"],
+    ["Festival","lineup"],
+    ["Parade","float"],
+    ["Fireworks","shell"],
+    ["Party","decor"],
+    ["Dance","floor"],
+    ["Karaoke","queue"],
+    ["Arcade","joystick"],
+    ["Bowling Alley","lane"],
+    ["Roller Rink","rink"],
+    ["Amusement Park","ride"],
+    ["Water Park","slide"],
+    ["Escape Room","lock"],
+    ["Laser Tag","sensor"],
+    ["Haunted House","prop"],
+    ["Campfire","log"],
+    ["BBQ","grill"],
+    ["Picnic","basket"],
+    ["Beach Party","net"],
+    ["Game Night","cards"],
+    ["Trivia Night","buzzer"],
+    ["Talent Show","stage"],
+    ["Art Class","palette"],
+    ["Painting","canvas"],
+    ["Drawing","pencil"],
+    ["Pottery","clay"],
+    ["Sculpture","chisel"],
+    ["Photography","aperture"],
+    ["Film","camera"],
+    ["Theater","grid"],
+    ["Musical","score"],
+    ["Opera","libretto"],
+    ["Ballet","tutu"],
+    ["Hip Hop","cypher"],
+    ["Jazz","sax"],
+    ["Rock Concert","amp"],
+    ["Pop Concert","stage"],
+    ["Classical","baton"],
+    ["Karate Tournament","ring"]
+  ],
+  professions:[
+    ["Doctor","stethoscope"],
+    ["Nurse","cart"],
+    ["Teacher","desk"],
+    ["Chef","knife"],
+    ["Waiter","tray"],
+    ["Pilot","cockpit"],
+    ["Flight Attendant","galley"],
+    ["Driver","wheel"],
+    ["Mechanic","wrench"],
+    ["Plumber","pipe"],
+    ["Electrician","cable"],
+    ["Carpenter","saw"],
+    ["Painter","brush"],
+    ["Firefighter","hose"],
+    ["Police Officer","radio"],
+    ["Soldier","rifle"],
+    ["Lawyer","brief"],
+    ["Judge","gavel"],
+    ["Cashier","scanner"],
+    ["Barista","tamper"],
+    ["Bartender","shaker"],
+    ["Photographer","tripod"],
+    ["Musician","metronome"],
+    ["Singer","mic"],
+    ["Actor","script"],
+    ["Dancer","barre"],
+    ["Artist","canvas"],
+    ["Writer","notebook"],
+    ["Journalist","press"],
+    ["Scientist","sample"],
+    ["Accountant","ledger"],
+    ["Banker","vault"],
+    ["Architect","blueprint"],
+    ["Engineer","gear"],
+    ["Programmer","code"],
+    ["Designer","swatch"],
+    ["Dentist","drill"],
+    ["Veterinarian","exam"],
+    ["Pharmacist","capsule"],
+    ["Librarian","shelf"],
+    ["Secretary","memo"],
+    ["Receptionist","directory"],
+    ["Mail Carrier","bag"],
+    ["Delivery Driver","manifest"],
+    ["Truck Driver","log"],
+    ["Construction Worker","helmet"],
+    ["Janitor","mop"],
+    ["Security Guard","badge"],
+    ["Lifeguard","whistle"],
+    ["Personal Trainer","dumbbell"],
+    ["Coach","clipboard"],
+    ["Referee","whistle"]
+  ]
 };
 const categoryNames={
   sports:"Sports",
