--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ sports:[
   ["Drag Racing","lights"],["Rally Racing","gravel"],["Go Karting","lap time"]
 ],
 animals:[
-  ["Dog","lick"],["Cat","litter box"],["Elephant","ivory"],
+  ["Dog","lick"],["Cat","calm"],["Elephant","ivory"],
   ["Giraffe","leaves"],["Lion","pride"],["Tiger","stripes"],
   ["Bear","cave"],["Monkey","trees"],["Zebra","stripes"],
   ["Penguin","tuxedo"],["Eagle","soar"],["Dolphin","clicks"],
