--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@ const category=document.getElementById("category");
 const data={
 sports:[
   ["Basketball","sneakers"],["Football","tailgate"],["Baseball","peanuts"],
-  ["Soccer","cup"],["Tennis","love"],["Golf","top"],
-  ["Hockey","glass"],["Volleyball","rotation"],["Swimming","lap"],
-  ["Boxing","mouthguard"],["Wrestling","headgear"],["Gymnastics","chalk"],
+  ["Soccer","vuvuzela"],["Tennis","love"],["Golf","caddy"],
+  ["Hockey","glass"],["Volleyball","rotation"],["Swimming","chlorine"],
+  ["Boxing","mouthguard"],["Wrestling","headgear"],["Gymnastics","leotard"],
   ["Track","spikes"],["Skiing","lodge"],["Surfing","reef"],
   ["Skateboarding","bearings"],["Cricket","tea"],["Rugby","mud"],
   ["Bowling","shoes"],["Lacrosse","mesh"],["Badminton","feather"],
@@ -462,7 +462,7 @@ sports:[
   ["Drag Racing","lights"],["Rally Racing","gravel"],["Go Karting","lap time"]
 ],
 animals:[
-  ["Dog","lick"],["Cat","calm"],["Elephant","ivory"],
+  ["Dog","collar"],["Cat","litter box"],["Elephant","ivory"],
   ["Giraffe","leaves"],["Lion","pride"],["Tiger","stripes"],
   ["Bear","cave"],["Monkey","trees"],["Zebra","stripes"],
   ["Penguin","tuxedo"],["Eagle","soar"],["Dolphin","clicks"],
